welcome.lessons.welcome.variables.Variables.scala.error
Variables:21: error: type mismatch;
 found   : Unit
 required: Boolean
if (nbPas=0)
         ^